; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_errorinfo.c_heap_strdupW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_errorinfo.c_heap_strdupW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @heap_strdupW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @heap_strdupW(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %23

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lstrlenW(i32* %8)
  %10 = add nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 4
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32* @heap_alloc(i64 %13)
  store i32* %14, i32** %3, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %7
  %18 = load i32*, i32** %3, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @memcpy(i32* %18, i32* %19, i64 %20)
  br label %22

22:                                               ; preds = %17, %7
  br label %23

23:                                               ; preds = %22, %1
  %24 = load i32*, i32** %3, align 8
  ret i32* %24
}

declare dso_local i32 @lstrlenW(i32*) #1

declare dso_local i32* @heap_alloc(i64) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
